<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="@dimen/dimen_primary">

    <LinearLayout
        android:id="@+id/layout_desc_jagosholat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_primary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs_apasih"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/textColorBlack"
            android:text="@string/aboutUs_pengertian"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingVertical="@dimen/fab_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iamgeican"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/about_us_ican" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUs_nama_ican"
                    android:gravity="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iamgeamir"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/about_us_amir" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUs_nama_amir"
                    android:gravity="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iamgebrian"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:src="@drawable/about_us_bryan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutUs_nama_bryan"
                    android:gravity="center"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/Background_Button"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/fab_margin">
            <TextView

                android:id="@+id/saran"
                android:textColor="@color/textColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textSize="15sp"
                android:text="@string/aboutUs_saran1"/>
            <TextView
                android:id="@+id/kirim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:layout_marginLeft="15dp"
                android:textSize="10sp"
                android:text="@string/aboutUs_saran2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:layout_below="@id/kirim"
                android:layout_marginLeft="15dp"
                android:textSize="10sp"
                android:text="@string/aboutUs_saran3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/margin_inside_fragment">

            <TextView
                android:id="@+id/haa"
                android:textColor="@color/textColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/aboutUs_version"/>
            <TextView
                android:id="@+id/paa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:textSize="10sp"
                android:text="@string/aboutUs_made1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorBlack"
                android:textSize="10sp"
                android:text="@string/aboutUs_made2"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>